[package]
name = "thirty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "*" # * -> the latest
evalexpr = "*"  # https://docs.rs/evalexpr/latest/evalexpr/
futures = "0.3"
tokio = { version = "1", features = ["full"] }

# async is a lib
[dependencies.async-std]
version = "1.6"
features = ["attributes"]